@@ -1,8 +1,5 @@
-DIST aqemu-0.8.0.tar.bz2 866896 RMD160 1091e84b03bdcb2c88bb6665d1b49b10c791964f SHA1 ef7e68d8520a49ea28be4ece5cb45a294aa4e9f0 SHA256 29e2e8663bb34d10888994766bb3aba3a916bbf18d2d10c189309c61e813c363
 DIST aqemu-0.8.1.tar.bz2 963345 RMD160 5ca436fb620e6d05855b4248132262e5c18649b4 SHA1 463f6befa84afec3168d08cd598b911b8666df64 SHA256 0fab894e5f49f688122ad15065bbdf278def1425a5d43ad2d64a21caf8dec41a
-EBUILD aqemu-0.8.0-r1.ebuild 1058 RMD160 80c4e4f1823384a477a305264a0479d4cda23a0e SHA1 e3aa3edf568ebcf7d6cbb410fdeb969681273564 SHA256 39d28fa887612e682394d02b9382a7577a6083235af8af1bdd9ac483aa3811fd
-EBUILD aqemu-0.8.0.ebuild 899 RMD160 09cb53de7bb0ffbd529871e0d2c0ec6ccc352e97 SHA1 16c9326bc9f20349b0b2233e4df0c3de8fc637d2 SHA256 412877728445e0edc7e1abfe047886f63b331e761e5c6c9328f05a1d47440e28
 EBUILD aqemu-0.8.1.ebuild 854 RMD160 54ec961d22ce7c0ff065307b24c5c7dd5ea0c690 SHA1 474ebcc964474c7148c40fa7ab7d89da52f9f84c SHA256 72a855a9db15679f6e589be15b2a1aa016d1ef6d593a778534b1a966cff82379
 EBUILD aqemu-9999.ebuild 1076 RMD160 3a7504c24d8d21f0c06a24cb67d3121cf0764359 SHA1 6f55629ce9d05bf46226c705259541291d58823f SHA256 da3ff40e78be7909fc998a05d13c7474d9b1f48dd20e44c99e231728116c8ce7
-MISC ChangeLog 1931 RMD160 fddf96ce92de6d0e9054c7387c3d521dab1e6d22 SHA1 d63ec03ee94663e184dfd3448bd1f0cd66a1a61d SHA256 91375f38999b7ae3b97dc68e9a72490b5ef9d955bf380f59dd8f7958e08d50e3
+MISC ChangeLog 2043 RMD160 94aec8cbb5228f487a4b5fcb0fa710b316a80bd8 SHA1 1cd10ce19a7508731a974b7cb2526f04ffb4052b SHA256 438472235e2948da57b993d1575d1fd1f1e91c19ba56cee7c9044e07fe5a7277
 MISC metadata.xml 406 RMD160 742984a62e6ce19d458bd2f43029e778edde3065 SHA1 1a796832c71e4285279f58280c53d95bc522b3eb SHA256 1c58742577125028f59fdb7c0dd6d1e3a165f224d4dc5dca5cdb2922110c874c
